--- a/weekzero/package.json
+++ b/weekzero/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "autoprefixer": "^10.4.13",
+    "heroicons": "^2.0.16",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
