--- a/weekzero/package.json
+++ b/weekzero/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.9.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
